<resources>
    <string name="app_name">Shake Your Brain</string>
    <string name="tutorial">Правила игры!</string>
    <string name="gamers">Игроки и результаты</string>
    <string name="instruction">Инструкция</string>

    <string name="enter">Пролог</string>
    <string name="play">Вперёд</string>
    <string name="noTime">Нет времени размышлять… Отвечай</string>
    <string name="enter_quantity">Введи количество правильных ответов</string>
    <string name="save">Сохранить</string>
    <string name="repeat">Продолжим</string>
    <string name="start">Start</string>
    <string name="next_question">Следующий вопрос</string>

    <string name="add_gamer">Добавь участника для викторины</string>
    <string name="tutorial_toolbar">Почитай, если нехуй делать!</string>

    <string name="hello">Активируйте не менее 2-х участников!</string>


    <string name="discharge_progress">Обнулите прогресс у победителя или у всех участников викторины, чтобы начать новую игру!
    Но это необязательно!)
    </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rules">У тебя совсем нет времени объяснять.
        \n by dzenis_ska
        Времени хватит только на то, чтобы перечислить несколько понятий на указанную тему.
        Успеешь меньше чем за 10 секунд назвать четырёх композиторов?
        Проверь себя в этой увлекательной викторине!

    </string>
    <string name="need_add_gamer">Shake Your Brain - это android-версия настольной (\"застольной\") игры для двух и более игроков!*
        \n Для добавления игрока нажмите \"+\"</string>
    <string name="queue">Вы можете менять очерёдность игроков зажав имя на 2 секундыи перетаскивая вверх или вниз</string>
    <string name="write_result">По истечении 10 секунд, после звукогого сигнала нужно ввести количество правильных ответов игрока</string>
    <string name="ps">* если не выбирать игроков для участия в викторине или выбрать только одного,
        товерсия игры без возможности записи результата</string>
    <string name="fav_gamer">Выберите игроков для участия в индивидуальной викторине, нажимая \"БЛЕНДЕР\"
    \n \"БЛЕНДЕР-зелёный\" - Вы в игре,
    \n \"БЛЕНДЕР-жёлтый\" - вне игры
    </string>
    <string name="need_delete_or_reprogress_gamer">Для сброса достижений игрока потяните \"ВПРАВО\".\n Для удаления игрока потяните \"ВЛЕВО\"</string>

    <!-- Реклама -->
<!--    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="ad_id">ca-app-pub-8644370805049292/7519786153</string>
<!--    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="ad_inter_id">ca-app-pub-8644370805049292/4056959965</string>

</resources>