<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <TextView
                    android:id="@+id/tvAddGamer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="@string/need_add_gamer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAddGamer"
                    app:srcCompat="@drawable/add_new_gamer" />

                <TextView
                    android:id="@+id/tvDeleteOrRecycl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="@string/need_delete_or_reprogress_gamer"
                    app:layout_constraintEnd_toEndOf="@+id/tvAddGamer"
                    app:layout_constraintStart_toStartOf="@+id/tvAddGamer"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/tvDeleteOrRecycl"
                    app:srcCompat="@drawable/left_right" />

                <TextView
                    android:id="@+id/tvFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="@string/fav_gamer"
                    app:layout_constraintEnd_toEndOf="@+id/tvDeleteOrRecycl"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@+id/tvDeleteOrRecycl"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/tvFav"
                    app:srcCompat="@drawable/favorit" />

                <TextView
                    android:id="@+id/tvMove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:text="@string/queue"
                    app:layout_constraintBottom_toTopOf="@+id/imageView7"
                    app:layout_constraintEnd_toEndOf="@+id/tvFav"
                    app:layout_constraintStart_toStartOf="@+id/tvFav"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/tvMove"
                    app:srcCompat="@drawable/up_down" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnUnderstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Понятно"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>